# rw_dealias

./: README.md
baselib/: CMakeLists.txt  readme.txt
baselib/src/: CMakeLists.txt  testlib.f90
bufrDPQCRW/: CMakeLists.txt  readme.txt
bufrDPQCRW/run/: encoderw_dealiasing.exe.old  err.dealias  genFileList.ksh  get_station_height.f90  namelist.input  r2bufr_new  radar_station_list.txt  run_jet.ksh  run_jet_reserv.ksh  run_r2bufr.ksh  rwfilelist  stdout_test
bufrDPQCRW/run/20240402/KRLX/: namelist.input  rwfilelist_KRLX
bufrDPQCRW/run/20240402/KRLX/Adjusted_largerlc/: sub_l2rwbufr_nssl_001  sub_l2rwbufr_nssl_dealiasing_001
bufrDPQCRW/run/20240402/KRLX/GlGrLc/: sub_l2rwbufr_nssl_dealiasing_001
bufrDPQCRW/run/20240426/KOAX/: note  rwfilelist
bufrDPQCRW/run/20240428/KTLX/: note  rwfilelist_KTLX
bufrDPQCRW/run/20240509/KHTX/: namelist.input  note  rwfilelist_KHTX
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw1/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw10/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw2/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw3/: sweep_az.txt  sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw4/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw5/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw6/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw7/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw8/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/bkg/sw9/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw1/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw10/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw2/: sweep_az.txt  sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw3/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw4/: sweep_az.txt  sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw5/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw6/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw7/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw8/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240402/dpqc/sw9/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw1/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw10/: sweep_az.txt  sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw2/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw3/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw4/: sweep_az.txt  sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw5/: sweep_vr.txt
bufrDPQCRW/run/r2bufr_out/20240426/bkg/sw6/: sweep_vr.txt
bufrDPQCRW/src/: CMakeLists.txt  EncodeRW_DPQC.f90  module_RW_DPQC.f90  module_RW_dealiasing.f90  module_background.f90  module_radar_station_config.f90  vad.f90
bufrDPQCRW/workflow/: RT_RWDEALIAS_wflow.db  RT_RWDEALIAS_wflow.xml  RT_RWDEALIAS_wflow_lock.db  RWDEALIAS_wflow.xml  log.rt_run_rw_wkflow  namelist.input.template  radar_station_list.txt  rt_run_rocoto.sh  run_rocoto.sh
bufrDPQCRW/workflow/jobs/: dealias_only.ksh  rw_dealias.ksh  test.ksh  testhpss.ksh
(+232 files in other folders)
